welcome.lessons.welcome.instructions.Instructions.scala.error
Program:3: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:6: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:9: error: too many arguments for method droite: ()Unit
droite(1)
      ^Program:11: error: too many arguments for method droite: ()Unit
droite(1)
      ^